--- a/src/forms/SettingsDlg.ui
+++ b/src/forms/SettingsDlg.ui
@@ -893,6 +893,9 @@
            </property>
           </widget>
          </item>
+         <item row="1" column="1" >
+          <widget class="QLineEdit" name="Edit_MountDir" />
+         </item>
          <item row="1" column="0" >
           <widget class="QLabel" name="label_2" >
            <property name="text" >
@@ -907,18 +910,46 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="1" >
-          <widget class="QLineEdit" name="Edit_MountDir" />
-         </item>
          <item row="0" column="1" >
           <widget class="QLineEdit" name="Edit_BrowserCmd" />
+         </item>
+         <item row="1" column="3" >
+          <spacer>
+           <property name="orientation" >
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeType" >
+            <enum>QSizePolicy::Maximum</enum>
+           </property>
+           <property name="sizeHint" >
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="0" column="2" colspan="2" >
+          <widget class="QCheckBox" name="CheckBox_BrowserDefault" >
+           <property name="sizePolicy" >
+            <sizepolicy>
+             <hsizetype>4</hsizetype>
+             <vsizetype>0</vsizetype>
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text" >
+            <string>System Default</string>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
        <item>
-        <widget class="QCheckBox" name="checkBox_VerifyAfterSaving" >
+        <widget class="QCheckBox" name="CheckBox_SaveRelativePaths" >
          <property name="text" >
-          <string>Verify database content and structure after saving</string>
+          <string>Save relative paths</string>
          </property>
         </widget>
        </item>
