added calendar dialog, added calendar access button in edit entry dialog, added customize detail view dialog for editing detail view templates, added 'show expired entries' dialog, new icon loading mechansim, added and replaced some icons.
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@130 b624d157-de02-0410-bad0-e51aec6abb33

--- a/src/forms/EditEntryDlg.ui
+++ b/src/forms/EditEntryDlg.ui
@@ -362,6 +362,16 @@
       <widget class="QDateTimeEdit" name="DateTime_Expire" />
      </item>
      <item>
+      <widget class="QToolButton" name="ButtonExpirePresets" >
+       <property name="text" >
+        <string>...</string>
+       </property>
+       <property name="popupMode" >
+        <enum>QToolButton::MenuButtonPopup</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QCheckBox" name="CheckBox_ExpiresNever" >
        <property name="text" >
         <string>Never</string>
