--- a/src/forms/AboutDlg.ui
+++ b/src/forms/AboutDlg.ui
@@ -1,7 +1,4 @@
 <ui version="4.0" >
- <author></author>
- <comment></comment>
- <exportmacro></exportmacro>
  <class>AboutDlg</class>
  <widget class="QDialog" name="AboutDlg" >
   <property name="geometry" >
@@ -23,170 +20,198 @@
   <property name="minimumSize" >
    <size>
     <width>419</width>
-    <height>211</height>
+    <height>268</height>
    </size>
   </property>
   <property name="maximumSize" >
    <size>
-    <width>211</width>
+    <width>419</width>
     <height>268</height>
    </size>
   </property>
   <property name="windowTitle" >
    <string>About</string>
   </property>
-  <widget class="QLabel" name="Banner" >
-   <property name="geometry" >
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>420</width>
-     <height>50</height>
-    </rect>
+  <layout class="QVBoxLayout" >
+   <property name="margin" >
+    <number>9</number>
    </property>
-   <property name="pixmap" >
-    <pixmap/>
+   <property name="spacing" >
+    <number>6</number>
    </property>
-   <property name="scaledContents" >
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QTabWidget" name="tabWidget" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>60</y>
-     <width>401</width>
-     <height>201</height>
-    </rect>
-   </property>
-   <widget class="QWidget" name="tab" >
-    <attribute name="title" >
-     <string>About</string>
-    </attribute>
-    <widget class="QLabel" name="label" >
-     <property name="geometry" >
-      <rect>
-       <x>20</x>
-       <y>20</y>
-       <width>351</width>
-       <height>17</height>
-      </rect>
+   <item>
+    <spacer>
+     <property name="orientation" >
+      <enum>Qt::Vertical</enum>
      </property>
-     <property name="text" >
-      <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;/head>&lt;body style=" white-space: pre-wrap; font-family:Sans Serif; font-size:9pt; font-weight:400; font-style:normal; text-decoration:none;">&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:12pt; font-weight:600;">KeePassX&lt;/span> - Cross Platform Password Manager&lt;/p>&lt;/body>&lt;/html></string>
+     <property name="sizeType" >
+      <enum>QSizePolicy::Fixed</enum>
      </property>
-    </widget>
-    <widget class="QLabel" name="label_4" >
-     <property name="geometry" >
-      <rect>
-       <x>30</x>
-       <y>110</y>
-       <width>341</width>
-       <height>51</height>
-      </rect>
+     <property name="sizeHint" >
+      <size>
+       <width>20</width>
+       <height>50</height>
+      </size>
      </property>
-     <property name="text" >
-      <string>Copyright (C) 2005 - 2006 Tarek Saidi 
+    </spacer>
+   </item>
+   <item>
+    <widget class="QTabWidget" name="tabWidget" >
+     <property name="currentIndex" >
+      <number>0</number>
+     </property>
+     <widget class="QWidget" name="tab" >
+      <attribute name="title" >
+       <string>About</string>
+      </attribute>
+      <layout class="QVBoxLayout" >
+       <property name="margin" >
+        <number>9</number>
+       </property>
+       <property name="spacing" >
+        <number>6</number>
+       </property>
+       <item>
+        <widget class="QLabel" name="label" >
+         <property name="text" >
+          <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;/head>&lt;body style=" white-space: pre-wrap; font-family:Sans Serif; font-size:9pt; font-weight:400; font-style:normal; text-decoration:none;">&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:12pt; font-weight:600;">KeePassX&lt;/span> - Cross Platform Password Manager&lt;/p>&lt;/body>&lt;/html></string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" >
+         <property name="margin" >
+          <number>0</number>
+         </property>
+         <property name="spacing" >
+          <number>6</number>
+         </property>
+         <item>
+          <spacer>
+           <property name="orientation" >
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeType" >
+            <enum>QSizePolicy::Fixed</enum>
+           </property>
+           <property name="sizeHint" >
+            <size>
+             <width>10</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <layout class="QVBoxLayout" >
+           <property name="margin" >
+            <number>0</number>
+           </property>
+           <property name="spacing" >
+            <number>12</number>
+           </property>
+           <item>
+            <widget class="LinkLabel" name="label_2" >
+             <property name="text" >
+              <string>http://keepassx.sourceforge.net</string>
+             </property>
+             <property name="buddy" >
+              <cstring></cstring>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="LinkLabel" name="label_3" >
+             <property name="text" >
+              <string>keepassx@gmail.com</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_4" >
+             <property name="text" >
+              <string>Copyright (C) 2005 - 2006 Tarek Saidi 
 KeePassX is distributed under the terms of the 
-General Public License (GPL) version 2.</string>
-     </property>
+General Public License (GPL) version 2 or later.</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab_2" >
+      <attribute name="title" >
+       <string>Credits</string>
+      </attribute>
+      <layout class="QVBoxLayout" >
+       <property name="margin" >
+        <number>9</number>
+       </property>
+       <property name="spacing" >
+        <number>6</number>
+       </property>
+       <item>
+        <widget class="QTextEdit" name="Edit_Thanks" >
+         <property name="readOnly" >
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab_4" >
+      <attribute name="title" >
+       <string>Translation</string>
+      </attribute>
+      <layout class="QVBoxLayout" >
+       <property name="margin" >
+        <number>9</number>
+       </property>
+       <property name="spacing" >
+        <number>6</number>
+       </property>
+       <item>
+        <widget class="QTextEdit" name="Edit_Translation" >
+         <property name="readOnly" >
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab_3" >
+      <attribute name="title" >
+       <string>License</string>
+      </attribute>
+      <layout class="QVBoxLayout" >
+       <property name="margin" >
+        <number>9</number>
+       </property>
+       <property name="spacing" >
+        <number>6</number>
+       </property>
+       <item>
+        <widget class="QTextEdit" name="Edit_License" >
+         <property name="readOnly" >
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
     </widget>
-    <widget class="LinkLabel" name="label_2" >
-     <property name="geometry" >
-      <rect>
-       <x>30</x>
-       <y>50</y>
-       <width>351</width>
-       <height>17</height>
-      </rect>
-     </property>
-     <property name="text" >
-      <string>http://keepassx.sourceforge.net</string>
-     </property>
-     <property name="buddy" >
-      <cstring></cstring>
-     </property>
-    </widget>
-    <widget class="LinkLabel" name="label_3" >
-     <property name="geometry" >
-      <rect>
-       <x>30</x>
-       <y>80</y>
-       <width>351</width>
-       <height>17</height>
-      </rect>
-     </property>
-     <property name="text" >
-      <string>keepassx@gmail.com</string>
-     </property>
-    </widget>
-   </widget>
-   <widget class="QWidget" name="tab_2" >
-    <attribute name="title" >
-     <string>Credits</string>
-    </attribute>
-    <widget class="QTextEdit" name="Edit_Thanks" >
-     <property name="geometry" >
-      <rect>
-       <x>3</x>
-       <y>3</y>
-       <width>390</width>
-       <height>166</height>
-      </rect>
-     </property>
-     <property name="readOnly" >
-      <bool>true</bool>
-     </property>
-    </widget>
-   </widget>
-   <widget class="QWidget" name="tab_4" >
-    <attribute name="title" >
-     <string>Translation</string>
-    </attribute>
-    <widget class="QTextEdit" name="Edit_Translation" >
-     <property name="geometry" >
-      <rect>
-       <x>3</x>
-       <y>3</y>
-       <width>390</width>
-       <height>167</height>
-      </rect>
-     </property>
-     <property name="readOnly" >
-      <bool>true</bool>
-     </property>
-    </widget>
-   </widget>
-   <widget class="QWidget" name="tab_3" >
-    <attribute name="title" >
-     <string>License</string>
-    </attribute>
-    <widget class="QTextEdit" name="Edit_License" >
-     <property name="geometry" >
-      <rect>
-       <x>3</x>
-       <y>3</y>
-       <width>391</width>
-       <height>167</height>
-      </rect>
-     </property>
-     <property name="readOnly" >
-      <bool>true</bool>
-     </property>
-    </widget>
-   </widget>
-  </widget>
+   </item>
+  </layout>
  </widget>
  <layoutdefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
  <customwidgets>
   <customwidget>
    <class>LinkLabel</class>
    <extends>QLabel</extends>
    <header>../../src/lib/UrlLabel.h</header>
-   <container>0</container>
-   <pixmap></pixmap>
   </customwidget>
  </customwidgets>
  <resources/>
