--- a/src/forms/PasswordGenDlg.ui
+++ b/src/forms/PasswordGenDlg.ui
@@ -5,29 +5,17 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>460</width>
-    <height>470</height>
+    <width>462</width>
+    <height>458</height>
    </rect>
   </property>
   <property name="sizePolicy" >
    <sizepolicy>
-    <hsizetype>0</hsizetype>
-    <vsizetype>0</vsizetype>
+    <hsizetype>4</hsizetype>
+    <vsizetype>4</vsizetype>
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
-  </property>
-  <property name="minimumSize" >
-   <size>
-    <width>460</width>
-    <height>470</height>
-   </size>
-  </property>
-  <property name="maximumSize" >
-   <size>
-    <width>460</width>
-    <height>470</height>
-   </size>
   </property>
   <property name="windowTitle" >
    <string>Password Generator</string>
@@ -62,7 +50,7 @@
      </property>
      <layout class="QVBoxLayout" >
       <property name="margin" >
-       <number>10</number>
+       <number>9</number>
       </property>
       <property name="spacing" >
        <number>6</number>
@@ -102,27 +90,14 @@
          </spacer>
         </item>
         <item>
-         <layout class="QVBoxLayout" >
+         <layout class="QGridLayout" >
           <property name="margin" >
            <number>0</number>
           </property>
           <property name="spacing" >
-           <number>0</number>
+           <number>6</number>
           </property>
-          <item>
-           <widget class="QCheckBox" name="checkBox1" >
-            <property name="text" >
-             <string>&amp;Upper Letters</string>
-            </property>
-            <property name="shortcut" >
-             <string>Alt+U</string>
-            </property>
-            <property name="checked" >
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
+          <item row="1" column="0" >
            <widget class="QCheckBox" name="checkBox2" >
             <property name="text" >
              <string>&amp;Lower Letters</string>
@@ -135,7 +110,17 @@
             </property>
            </widget>
           </item>
-          <item>
+          <item row="2" column="1" >
+           <widget class="QCheckBox" name="checkBox7" >
+            <property name="text" >
+             <string>U&amp;nderline</string>
+            </property>
+            <property name="shortcut" >
+             <string>Alt+N</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0" >
            <widget class="QCheckBox" name="checkBox3" >
             <property name="text" >
              <string>&amp;Numbers</string>
@@ -148,7 +133,37 @@
             </property>
            </widget>
           </item>
-          <item>
+          <item row="0" column="1" >
+           <widget class="QCheckBox" name="checkBox5" >
+            <property name="text" >
+             <string>White &amp;Spaces</string>
+            </property>
+            <property name="shortcut" >
+             <string>Alt+S</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0" >
+           <widget class="QCheckBox" name="checkBox1" >
+            <property name="text" >
+             <string>&amp;Upper Letters</string>
+            </property>
+            <property name="shortcut" >
+             <string>Alt+U</string>
+            </property>
+            <property name="checked" >
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1" >
+           <widget class="QCheckBox" name="checkBox6" >
+            <property name="text" >
+             <string>Minus</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0" >
            <widget class="QCheckBox" name="checkBox4" >
             <property name="text" >
              <string>&amp;Special Characters</string>
@@ -161,64 +176,14 @@
          </layout>
         </item>
         <item>
-         <layout class="QVBoxLayout" >
-          <property name="margin" >
-           <number>0</number>
-          </property>
-          <property name="spacing" >
-           <number>0</number>
-          </property>
-          <item>
-           <widget class="QCheckBox" name="checkBox5" >
-            <property name="text" >
-             <string>White &amp;Spaces</string>
-            </property>
-            <property name="shortcut" >
-             <string>Alt+S</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="checkBox6" >
-            <property name="text" >
-             <string>Minus</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="checkBox7" >
-            <property name="text" >
-             <string>U&amp;nderline</string>
-            </property>
-            <property name="shortcut" >
-             <string>Alt+N</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer>
-            <property name="orientation" >
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" >
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-         </layout>
-        </item>
-        <item>
          <spacer>
           <property name="orientation" >
            <enum>Qt::Horizontal</enum>
           </property>
           <property name="sizeHint" >
            <size>
-            <width>40</width>
-            <height>20</height>
+            <width>101</width>
+            <height>108</height>
            </size>
           </property>
          </spacer>
@@ -273,10 +238,13 @@
         <property name="orientation" >
          <enum>Qt::Vertical</enum>
         </property>
+        <property name="sizeType" >
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
         <property name="sizeHint" >
          <size>
           <width>20</width>
-          <height>20</height>
+          <height>25</height>
          </size>
         </property>
        </spacer>
@@ -381,6 +349,22 @@
            <bool>true</bool>
           </property>
          </widget>
+        </item>
+        <item>
+         <spacer>
+          <property name="orientation" >
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType" >
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" >
+           <size>
+            <width>10</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
         </item>
         <item>
          <widget class="QCheckBox" name="Check_CollectOncePerSession" >
