--- a/src/forms/MainWindow.ui
+++ b/src/forms/MainWindow.ui
@@ -18,11 +18,20 @@
   </property>
   <widget class="QWidget" name="centralWidget" >
    <layout class="QVBoxLayout" >
-    <property name="margin" >
-     <number>9</number>
-    </property>
     <property name="spacing" >
      <number>6</number>
+    </property>
+    <property name="leftMargin" >
+     <number>9</number>
+    </property>
+    <property name="topMargin" >
+     <number>9</number>
+    </property>
+    <property name="rightMargin" >
+     <number>9</number>
+    </property>
+    <property name="bottomMargin" >
+     <number>9</number>
     </property>
     <item>
      <widget class="QSplitter" name="HSplitter" >
@@ -31,9 +40,7 @@
       </property>
       <widget class="QSplitter" name="VSplitter" >
        <property name="sizePolicy" >
-        <sizepolicy>
-         <hsizetype>7</hsizetype>
-         <vsizetype>7</vsizetype>
+        <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
          <horstretch>0</horstretch>
          <verstretch>60</verstretch>
         </sizepolicy>
@@ -46,9 +53,7 @@
          <bool>false</bool>
         </property>
         <property name="sizePolicy" >
-         <sizepolicy>
-          <hsizetype>7</hsizetype>
-          <vsizetype>7</vsizetype>
+         <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
           <horstretch>30</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
@@ -68,9 +73,7 @@
          <bool>false</bool>
         </property>
         <property name="sizePolicy" >
-         <sizepolicy>
-          <hsizetype>7</hsizetype>
-          <vsizetype>7</vsizetype>
+         <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
           <horstretch>70</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
@@ -83,14 +86,12 @@
         </property>
        </widget>
       </widget>
-      <widget class="QTextEdit" name="DetailView" >
+      <widget class="QTextBrowser" name="DetailView" >
        <property name="enabled" >
         <bool>false</bool>
        </property>
        <property name="sizePolicy" >
-        <sizepolicy>
-         <hsizetype>7</hsizetype>
-         <vsizetype>7</vsizetype>
+        <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
          <horstretch>0</horstretch>
          <verstretch>10</verstretch>
         </sizepolicy>
@@ -103,6 +104,9 @@
        </property>
        <property name="readOnly" >
         <bool>true</bool>
+       </property>
+       <property name="openLinks" >
+        <bool>false</bool>
        </property>
       </widget>
      </widget>
@@ -221,8 +225,10 @@
      <string>E&amp;xtras</string>
     </property>
     <addaction name="ExtrasSettingsAction" />
-    <addaction name="ExtrasShowExpiredEntriesAction" />
     <addaction name="ExtrasPasswordGenAction" />
+    <addaction name="separator" />
+    <addaction name="ExtrasShowExpiredEntriesAction" />
+    <addaction name="ExtrasTrashCanAction" />
    </widget>
    <addaction name="menuDatei" />
    <addaction name="menuBearbeiten" />
@@ -531,6 +537,11 @@
    </property>
    <property name="toolTip" >
     <string>Show Expired Entries</string>
+   </property>
+  </action>
+  <action name="ExtrasTrashCanAction" >
+   <property name="text" >
+    <string>Recycle Bin...</string>
    </property>
   </action>
  </widget>
