auto-type delays
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@137 b624d157-de02-0410-bad0-e51aec6abb33

--- a/share/keepass/doc/css/style.css
+++ b/share/keepass/doc/css/style.css
@@ -2,7 +2,7 @@
 	min-height: 120px;
 	height: auto !important;
 	height: 120px;
-	background-image: url('../images/headerbackground.png');
+	background-image: url('./images/headerbackground.png');
 	background-repeat: repeat-x;
 	padding: 0 25px 15px 25px;
 	padding: 0;
@@ -12,7 +12,7 @@
 	min-height: 120px;
 	height: auto !important;
 	height: 120px;
-	background-image: url('../images/logo.png');
+	background-image: url('./images/logo.png');
 	padding: 0 25px 15px 25px;
 	background-repeat: no-repeat;
 	padding: 0;
