--- a/src/forms/SettingsDlg.ui
+++ b/src/forms/SettingsDlg.ui
@@ -1060,7 +1060,7 @@
            <number>6</number>
           </property>
           <item row="0" column="1" >
-           <widget class="QSpinBox" name="spinBox_PreGap" >
+           <widget class="QSpinBox" name="SpinBox_AutoTypePreGap" >
             <property name="whatsThis" >
              <string>Time between the activation of an auto-type action by the user and the first simulated key stroke.</string>
             </property>
@@ -1106,7 +1106,7 @@
            </widget>
           </item>
           <item row="1" column="1" >
-           <widget class="QSpinBox" name="spinBox_KeyStrokeDelay" >
+           <widget class="QSpinBox" name="SpinBox_AutoTypeKeyStrokeDelay" >
             <property name="whatsThis" >
              <string>Delay between two simulated key strokes. Increase this if Auto-Type is randomly skipping characters.</string>
             </property>
