--- a/src/forms/EditEntryDlg.ui
+++ b/src/forms/EditEntryDlg.ui
@@ -86,6 +86,12 @@
      </item>
      <item row="0" column="1" >
       <widget class="QToolButton" name="ButtonEchoMode" >
+        <property name="iconSize" >
+          <size>
+            <width>16</width>
+            <height>16</height>
+          </size>
+        </property>
        <property name="sizePolicy" >
         <sizepolicy>
          <hsizetype>1</hsizetype>
@@ -105,9 +111,6 @@
          <width>16777215</width>
          <height>23</height>
         </size>
-       </property>
-       <property name="text" >
-        <string>...</string>
        </property>
       </widget>
      </item>
@@ -280,7 +283,11 @@
     </widget>
    </item>
    <item row="8" column="1" >
-    <widget class="QTextEdit" name="Edit_Comment" />
+    <widget class="QTextEdit" name="Edit_Comment" >
+     <property name="tabChangesFocus" >
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
    <item row="12" column="0" colspan="2" >
     <widget class="Line" name="line1" >
@@ -326,6 +333,12 @@
        <property name="icon" >
         <iconset/>
        </property>
+       <property name="iconSize" >
+        <size>
+         <width>16</width>
+         <height>16</height>
+        </size>
+       </property>
       </widget>
      </item>
      <item>
@@ -336,6 +349,12 @@
        <property name="icon" >
         <iconset/>
        </property>
+       <property name="iconSize" >
+        <size>
+         <width>16</width>
+         <height>16</height>
+        </size>
+       </property>
       </widget>
      </item>
      <item>
@@ -345,6 +364,12 @@
        </property>
        <property name="icon" >
         <iconset/>
+       </property>
+       <property name="iconSize" >
+        <size>
+         <width>16</width>
+         <height>16</height>
+        </size>
        </property>
       </widget>
      </item>
@@ -364,7 +389,13 @@
      <item>
       <widget class="QToolButton" name="ButtonExpirePresets" >
        <property name="text" >
-        <string>...</string>
+        <string/>
+       </property>
+       <property name="iconSize" >
+        <size>
+         <width>16</width>
+         <height>16</height>
+        </size>
        </property>
        <property name="popupMode" >
         <enum>QToolButton::MenuButtonPopup</enum>
@@ -434,7 +465,32 @@
       <number>6</number>
      </property>
      <item>
-      <widget class="QComboBox" name="Combo_Group" />
+      <widget class="QComboBox" name="Combo_Group" >
+       <property name="sizePolicy" >
+        <sizepolicy>
+         <hsizetype>3</hsizetype>
+         <vsizetype>0</vsizetype>
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer>
+       <property name="orientation" >
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType" >
+        <enum>QSizePolicy::Fixed</enum>
+       </property>
+       <property name="sizeHint" >
+        <size>
+         <width>100</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
      <item>
       <widget class="QLabel" name="textLabel1" >
@@ -447,12 +503,12 @@
       </widget>
      </item>
      <item>
-      <widget class="QComboBox" name="Combo_IconPicker" />
-     </item>
-     <item>
-      <widget class="QToolButton" name="Button_CustomIcons" >
-       <property name="text" >
-        <string>></string>
+      <widget class="QToolButton" name="Button_Icons" >
+       <property name="iconSize" >
+        <size>
+         <width>16</width>
+         <height>16</height>
+        </size>
        </property>
       </widget>
      </item>
@@ -488,20 +544,24 @@
  </widget>
  <layoutdefault spacing="6" margin="11" />
  <tabstops>
-  <tabstop>Combo_Group</tabstop>
-  <tabstop>Combo_IconPicker</tabstop>
   <tabstop>Edit_Title</tabstop>
   <tabstop>Edit_UserName</tabstop>
   <tabstop>Edit_URL</tabstop>
   <tabstop>Edit_Password</tabstop>
   <tabstop>Edit_Password_w</tabstop>
   <tabstop>Edit_Comment</tabstop>
+  <tabstop>DateTime_Expire</tabstop>
+  <tabstop>ButtonExpirePresets</tabstop>
+  <tabstop>CheckBox_ExpiresNever</tabstop>
   <tabstop>Edit_Attachment</tabstop>
   <tabstop>ButtonOpenAttachment</tabstop>
   <tabstop>ButtonSaveAttachment</tabstop>
   <tabstop>ButtonDeleteAttachment</tabstop>
   <tabstop>ButtonEchoMode</tabstop>
   <tabstop>ButtonGenPw</tabstop>
+  <tabstop>buttonBox</tabstop>
+  <tabstop>Combo_Group</tabstop>
+  <tabstop>Button_Icons</tabstop>
  </tabstops>
  <resources/>
  <connections/>
